--- a/Buttons Container/index.html
+++ b/Buttons Container/index.html
@@ -10,22 +10,16 @@
 </head>
 
 <body>
-    <div id="btns">
-        <div>
-            <button id="btn1" class="btn">1</button>
-            <button id="btn2" class="btn">2</button>
-            <button id="btn3" class="btn">3</button>
-        </div>
-        <div>
-            <button id="btn4" class="btn">4</button>
-            <button id="btn5" class="btn">5</button>
-            <button id="btn6" class="btn">6</button>
-        </div>
-        <div>
-            <button id="btn7" class="btn">7</button>
-            <button id="btn7" class="btn">8</button>
-            <button id="btn7" class="btn">9</button>
-        </div>
+    <div id="btns" class="buttoncontainer">
+         <button id="btn1" class="btn">1</button>
+         <button id="btn2" class="btn">2</button>
+         <button id="btn3" class="btn">3</button>
+         <button id="btn4" class="btn">4</button>
+         <button id="btn5" class="btn">5</button>
+         <button id="btn6" class="btn">6</button>
+         <button id="btn7" class="btn">7</button>
+         <button id="btn8" class="btn">8</button>
+         <button id="btn9" class="btn">9</button>
     </div>
     <script src="/Buttons Container/buttonsGrid.js"></script>
 </body>
